--- a/templates/index.html
+++ b/templates/index.html
@@ -1,6 +1,8 @@
 <!doctype html>
     <head>
         <title>Timelapse Controller</title>
+        <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='bootstrap.min.css') }}">
+        <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='custom.css') }}">
         <meta name="viewport" content="width=device-width, initial-scale=1">
     </head>
     <body>
@@ -35,7 +37,7 @@
                         <label for="exposure-count">Exposure count:</label>
                     </div>
                     <div>
-                        <input type="number" name="exposure-count" id="exposures">
+                        <input class="form-control" type="text" name="exposure-count" id="exposures">
                     </div>
                 </div>
                 <div>
@@ -43,7 +45,7 @@
                         <label for="exposure-duration">Exposure Duration (s):</label>
                     </div>
                     <div>
-                        <input type="number" name="exposure-duration" id="exposures">
+                        <input class="form-control" type="text" name="exposure-duration" id="exposures">
                     </div>
                 </div>
                 <div>
@@ -51,15 +53,15 @@
                         <label for="exposure-spacing">Time Between Exposures (s):</label>
                     </div>
                     <div>
-                        <input type="number" name="exposure-spacing" id="exposures">
+                        <input class="form-control" type="text" name="exposure-spacing" id="exposures">
                     </div>
                 </div>
                 <div>
                     <div>
-                        <input type="submit" name="start" value="Start">
+                        <input class="btn btn-danger" type="submit" name="start" value="Start">
                     </div>
                     <div>
-                        <input type="submit" name="stop" value="Stop">
+                        <input class="btn btn-danger" type="submit" name="stop" value="Stop">
                     </div>
                 </div>
             </div>
