--- a/templates/index.html
+++ b/templates/index.html
@@ -36,7 +36,7 @@
                 {% endif %}
                 <div>
                     <div class="row form-group">
-                        <div class="col">
+                        <div class="col-7">
                             <label for="exposure-count">Exposure count:</label>
                         </div>
                         <div class="col">
@@ -44,7 +44,7 @@
                         </div>
                     </div>
                     <div class="row form-group">
-                        <div class="col">
+                        <div class="col-7">
                             <label for="exposure-duration">Exposure Duration (s):</label>
                         </div>
                         <div class="col">
@@ -52,7 +52,7 @@
                         </div>
                     </div>
                     <div class="row form-group">
-                        <div class="col">
+                        <div class="col-7">
                             <label for="exposure-spacing">Time Between Exposures (s):</label>
                         </div>
                         <div class="col">
@@ -64,7 +64,7 @@
                             <input class="btn btn-outline-secondary" type="submit" name="stop" value="Stop">             
                         </div>
                         <div class="col">
-                            <input class="btn btn-outline-danger" type="submit" name="start" value="Start">
+                            <input class="btn btn-outline-danger float-right" type="submit" name="start" value="Start">
                         </div>
                     </div>
                 </div>
