--- a/templates/index.html
+++ b/templates/index.html
@@ -14,6 +14,7 @@
                     </div>
                 </div>
                 {% if status %}
+                    {{ status }}
                 {% endif %}
                 {% if settings %}
                 <div>
