progress on progress

--- a/templates/index.html
+++ b/templates/index.html
@@ -18,7 +18,7 @@
                 <div class="col">
                     <p>Progress:</p>
                     <div class="progress">
-                        <div class="progress-bar progress-bar-striped progress-bar-animated bg-danger"></div>
+                        <div id="progress" class="progress-bar progress-bar-striped progress-bar-animated bg-danger"></div>
                     </div>
                 </div>
             </div>
