--- a/templates/index.html
+++ b/templates/index.html
@@ -4,6 +4,21 @@
         <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='bootstrap.min.css') }}">
         <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='custom.css') }}">
         <meta name="viewport" content="width=device-width, initial-scale=1">
+        {% if is_running %}
+        <script>
+            setInterval(function() {
+                var intervalId = fetch('progress').then(function(response) {
+                    return response.json()
+                }).then(function(json) {
+                    document.getElementById('progress').style = `width: ${json['progress']}%`;
+
+                    if (json['progress'] === 100) {
+                        clearInterval(intervalId);
+                    }
+                });
+            }, 1000);
+        </script>
+        {% endif %}
     </head>
     <body>
         <div class="container">
@@ -14,14 +29,16 @@
                 </div>
             </div>
 
-            <div class="row mb-4 justify-cozntent-center">
+            {% if is_running %}
+            <div class="row mb-4 justify-content-center">
                 <div class="col">
-                    <p>Progress</p>
+                    <p>Timelapse running. Progress:</p>
                     <div class="progress">
                         <div id="progress" class="progress-bar progress-bar-striped progress-bar-animated bg-danger"></div>
                     </div>
                 </div>
             </div>
+            {% endif %}
                 
             <form action="{{ url_for('index') }}" method="POST">
                 {{ form.csrf_token }}
