--- a/templates/index.html
+++ b/templates/index.html
@@ -16,7 +16,7 @@
                         clearInterval(intervalId);
                     }
                 });
-            }, 1000);
+            }, 5000);
         </script>
         {% endif %}
     </head>
@@ -25,7 +25,7 @@
 
             <div class="row mt-3 justify-content-center">
                 <div class="col">
-                    <h3>Timelapse Controller</h3>
+                    <h3>Sequence Controller</h3>
                 </div>
             </div>
 
